--- a/package.json
+++ b/package.json
@@ -25,13 +25,17 @@
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.10",
     "eslint": "^4.18.1",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "file-loader": "^1.1.11",
+    "prettier": "^1.11.1",
+    "prettier-eslint": "^8.8.1",
     "prop-types": "^15.6.1",
     "style-loader": "^0.20.2",
     "svg-inline-loader": "^0.8.0",
@@ -46,6 +50,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "semantic-ui-css": "^2.3.0",
-    "semantic-ui-react": "^0.78.3"
+    "semantic-ui-react": "^0.78.3",
+    "validator": "^9.4.1"
   }
 }
