make it easier to switch between dev and prod

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "webpack",
     "lint": "eslint src --ext .js,.jsx",
     "start": "webpack-dev-server --config ./webpack.config.js",
+    "prod": "webpack-dev-server --config ./webpack.config.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
