--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.3.0",
     "semantic-ui-react": "^0.78.3",
+    "socket.io-client": "^2.1.0",
     "spotify-web-api-js": "^0.24.0",
     "validator": "^9.4.1"
   }
