--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "lint": "eslint src --ext .js,.jsx",
-    "start": "webpack-dev-server --config ./webpack.config.js",
+    "start": "webpack-dev-server --https --config ./webpack.config.js",
     "prod": "webpack-dev-server --config ./webpack.config.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -61,6 +61,7 @@
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.3.0",
     "semantic-ui-react": "^0.78.3",
+    "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
     "spotify-web-api-js": "^0.24.0",
     "validator": "^9.4.1"
